--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,23 @@
 .drawing-canvas-container {
   width: 100vw;
   height: 100vh;
+  padding: 2rem;
   background: #5290a1;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  grid-template-rows: 1fr;
+  grid-auto-rows: 150px;
+  grid-gap: 1rem;
+}
+
+.drawing-canvas-container .main {
+  background: #ebeded;
+  grid-column: -2 / 1;
+}
+
+.drawing-canvas-container .tools {
+  grid-column: -2;
 }
 
 .canvas {
